# vku

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  fpscounter.py  printprofile.py  vku_device_vb_example.py  vku_example.py  vku_texture_example.py  vku_uniform_buffer_example.py  vku_vb_example.py
examples/: device_vertex_buffer_example.cpp  example.cpp  example_application.h  uniform_buffer_example.cpp  vertex_buffer_example.cpp
include/: vku.h
resources/shaders/: raytracing_example.frag  raytracing_example.vert  triangle.vert  triangle_buffer.frag  triangle_buffer.vert
scripts/: autocompileshaders.py  build.py  buildresources.py  compileshaders.py  config.py  copyresources.py  util.py
source/: pyvku.cpp
